[package]
name = "wovocrypt"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "all-alg"]

# --- std/alloc/all-alg ---
std = ["alloc"]
alloc = []
all-alg = ["all-hash", "all-mac", "all-aes"]

# --- Hash ---
all-hash = ["sha224", "sha256", "sha384", "sha512"]
sha224 = []
sha256 = []
sha384 = []
sha512 = []

# --- aes ---
all-aes = ["aes128", "aes192", "aes256"]
aes128 = []
aes192 = []
aes256 = []

# --- Mac ---
all-mac = ["hmac"]
hmac = []

[dependencies]
zeroize = { version = "1.8.1", features = ["derive"], default-features = false }

[dev-dependencies]
hex = "0.4.3"
